# agents

./: .gitignore  agent.ipynb  agents.md  docker-compose.yml  dockerfile  main.ipynb  main.py  pyproject.toml
agents/: agents.py  models.py  tools.py
agents/config/: agents.yml  tasks.yml
db/: chroma.sqlite3
